--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "grunt-bower-task": "^0.3.4",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
+    "grunt-bower-task": "^0.3.4",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.3.0",
@@ -19,7 +19,8 @@
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
-    "sails-generate-bower": "0.0.2"
+    "sails-generate-bower": "0.0.2",
+    "sails-mysql": "^0.10.9"
   },
   "name": "felloin",
   "private": true,
