--- a/bower.json
+++ b/bower.json
@@ -10,10 +10,11 @@
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.1",
     "requirejs": "~2.1.15",
-    "angular": "~1.3.8"
+    "angular": "~1.3.8",
+    "font-awesome": "~4.3.0"
   },
-  "name": "felloin",
+  "name": "fello.in",
   "version": "0.0.0",
-  "author": "anonymous node/sails user",
+  "author": "fello.in",
   "private": true
 }
