--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,7 @@
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.1",
     "requirejs": "~2.1.15",
-    "angular": "~1.3.8",
-    "font-awesome": "~4.3.0"
+    "angular": "~1.3.8"
   },
   "name": "fello.in",
   "version": "0.0.0",
