--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "bootstrap": "~3.3.1",
     "requirejs": "~2.1.15",
     "angular": "~1.3.8",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "underscore": "~1.7.0"
   },
   "name": "fello.in",
   "version": "0.0.0",
