--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "requirejs": "~2.1.15",
     "angular": "~1.3.8",
     "angular-ui-router": "~0.2.13",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "ng-elif": "~0.1.2",
+    "angular-timer": "~1.2.0"
   },
   "name": "fello.in",
   "version": "0.0.0",
