--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "name": "felloin",
   "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "version": "0.1.0",
+  "description": "fello.in - a Live Video chat solution for business websites",
   "keywords": [],
   "scripts": {
     "start": "node app.js",
@@ -37,6 +37,9 @@
     "type": "git",
     "url": "git://github.com/anonymous node/sails user/felloin.git"
   },
-  "author": "anonymous node/sails user",
-  "license": ""
+  "author": "fello/sails user",
+  "license": "",
+  "devDependencies": {
+    "grunt-asset-linker": "^0.1.0"
+  }
 }
