--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.1",
     "requirejs": "~2.1.15",
-    "angular": "~1.3.8",
+    "angular": "~1.3.15",
     "angular-ui-router": "~0.2.13",
     "underscore": "~1.7.0",
     "ng-elif": "~0.1.2",
@@ -18,7 +18,11 @@
     "lodash": "~3.2.0",
     "ng-i18next": "~0.3.6",
     "momentjs": "~2.9.0",
-    "humanize-duration": "~2.4.0"
+    "humanize-duration": "~2.4.0",
+    "jquery-impromptu": "~6.1.0",
+    "angular-sanitize": "~1.3.15",
+    "angular-bind-html-compile": "~1.0.1",
+    "angular-cookies": "~1.3.15"
   },
   "name": "fello.in",
   "version": "0.0.0",
