--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "easyrtc": "^1.0.12",
+    "async": "^0.9.0",
+    "bluebird": "~2.9.14",
+    "easyrtc": "^1.0.13",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-bower-task": "^0.4.0",
@@ -17,6 +19,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "jade": "^1.8.2",
+    "lodash": "~3.5.0",
     "rc": "~0.5.0",
     "sails": "~0.10.5",
     "sails-disk": "~0.10.0",
