--- a/appProd.json
+++ b/appProd.json
@@ -7,12 +7,14 @@
     "error_file" : "./logs/felloin-err.log",
     "out_file"   : "./logs/felloin-out.log",
     "pid_file"   : "./felloin.pid",
-    "exec_mode"  : "cluster_mode",
-    "port"       : 9005,
-    "cwd"         : "/var/node/fello/fello.in",
+    "exec_mode"  : "fork_mode",
+    "port"       : 1001,
+    "cwd"        : "/var/node/fello/fello.in",
+    "args"       : ["-x", "--", "--prod"],
     "env": {
-        "NODE_ENV": "production",
-        "GETCONFIG_ROOT": "/var/node/fello/fello.in"
+      "PORT": 1001,
+      "NODE_ENV": "production",
+      "GETCONFIG_ROOT": "/var/node/fello/fello.in"
     }
   }]
 }
