--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "jquery-impromptu": "~6.1.0",
     "angular-sanitize": "~1.3.15",
     "angular-bind-html-compile": "~1.0.1",
-    "angular-cookies": "~1.3.15"
+    "angular-cookies": "~1.3.15",
+    "angular-ui-bootstrap": "~0.12.1"
   },
   "name": "fello.in",
   "version": "0.0.0",
