--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-sanitize": "~1.3.15",
     "angular-bind-html-compile": "~1.0.1",
     "angular-cookies": "~1.3.15",
-    "angular-ui-bootstrap": "~0.12.1"
+    "angular-ui-bootstrap": "~0.12.1",
+    "angular-sails": "~1.1.2"
   },
   "name": "fello.in",
   "version": "0.0.0",
